Changed a few things with Scheduler